force-app/main/default/objects/NPP__c/fields/HQ_Pain_Related_Goals__c.field-meta.xml
<CustomField>
    <fullName>HQ_Pain_Related_Goals__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Pain-related goals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Return to recreational activities</fullName>
            </value>
            <value>
                <fullName>Giving 100% with my family,At work or at the Gym</fullName>
                <label>Giving 100% with my family,at work or at the Gym</label>
            </value>
            <value>
                <fullName>Having a pain free life, free to take on new experiences.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>