force-app/main/default/objects/NPP__c/fields/HQ_PaperFilled__c.field-meta.xml
<CustomField>
    <fullName>HQ_PaperFilled__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Paperfilled</label>
    <type>Checkbox</type>
</CustomField>