force-app/main/default/objects/NPP__c/fields/HQ_Paperwork_Status__c.field-meta.xml
<CustomField>
    <fullName>HQ_Paperwork_Status__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Paperwork status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>