force-app/main/default/objects/NPP__c/fields/HQ_Past_Medical_Procedures__c.field-meta.xml
<CustomField>
    <fullName>HQ_Past_Medical_Procedures__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Past medical procedures</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>X-Ray</fullName>
            </value>
            <value>
                <fullName>MRI</fullName>
            </value>
            <value>
                <fullName>EMG</fullName>
            </value>
            <value>
                <fullName>CT Scan</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>