force-app/main/default/objects/NPP__c/fields/HQ_past_surgical_history_or_any_other__c.field-meta.xml
<CustomField>
    <fullName>HQ_past_surgical_history_or_any_other__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>past surgical history or any other proce</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>