force-app/main/default/objects/NPP__c/fields/HQ_Patient_Id2__c.field-meta.xml
<CustomField>
    <fullName>HQ_Patient_Id2__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <formula>Account__r.CareCloud_Patient_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Id</label>
    <type>Text</type>
</CustomField>