force-app/main/default/objects/NPP__c/fields/HQ_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>HQ_Patient_Id__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Patient Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>