force-app/main/default/objects/NPP__c/fields/HQ_Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>HQ_Patient_Name__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Patient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>