force-app/main/default/objects/NPP__c/fields/HQ_Patient_or_Legal_Represenatative_Sign__c.field-meta.xml
<CustomField>
    <fullName>HQ_Patient_or_Legal_Represenatative_Sign__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Patient or Legal Represenatative Signatu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>