force-app/main/default/objects/NPP__c/fields/HQ_pdf_created__c.field-meta.xml
<CustomField>
    <fullName>HQ_pdf_created__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>pdf created</label>
    <type>Checkbox</type>
</CustomField>