force-app/main/default/objects/NPP__c/fields/HQ_pdf_transferred__c.field-meta.xml
<CustomField>
    <fullName>HQ_pdf_transferred__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>pdf transferred</label>
    <type>Checkbox</type>
</CustomField>