force-app/main/default/objects/NPP__c/fields/HQ_Pharmacy_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>HQ_Pharmacy_Phone_Number__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Pharmacy phone number</label>
    <type>Phone</type>
</CustomField>