force-app/main/default/objects/NPP__c/fields/HQ_physical_demands_of_occupation_other__c.field-meta.xml
<CustomField>
    <fullName>HQ_physical_demands_of_occupation_other__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>physical demands of occupation other</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>