force-app/main/default/objects/NPP__c/fields/HQ_Post_Standing_Sitting_Leg_Discomfort__c.field-meta.xml
<CustomField>
    <fullName>HQ_Post_Standing_Sitting_Leg_Discomfort__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Post-Standing/Sitting Leg Discomfort</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>