force-app/main/default/objects/NPP__c/fields/HQ_Prefered_Pharmacy_Address__c.field-meta.xml
<CustomField>
    <fullName>HQ_Prefered_Pharmacy_Address__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Preferred pharmacy address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>