force-app/main/default/objects/NPP__c/fields/HQ_Preferred_Pharmacy_Address__c.field-meta.xml
<CustomField>
    <fullName>HQ_Preferred_Pharmacy_Address__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Preferred pharmacy address</label>
    <type>Address</type>
</CustomField>