force-app/main/default/objects/NPP__c/fields/HQ_Privacy_Response__c.field-meta.xml
<CustomField>
    <fullName>HQ_Privacy_Response__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Privacy response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>