force-app/main/default/objects/NPP__c/fields/HQ_Quality_of_the_pain__c.field-meta.xml
<CustomField>
    <fullName>HQ_Quality_of_the_pain__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Quality of the pain</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Constant</fullName>
            </value>
            <value>
                <fullName>Aching</fullName>
            </value>
            <value>
                <fullName>Burning Sporadic/Intermitten</fullName>
            </value>
            <value>
                <fullName>Throbbing</fullName>
            </value>
            <value>
                <fullName>Sharp</fullName>
            </value>
            <value>
                <fullName>Shooting</fullName>
            </value>
            <value>
                <fullName>Popping</fullName>
            </value>
            <value>
                <fullName>Clicking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>