force-app/main/default/objects/NPP__c/fields/HQ_Record_End_Date__c.field-meta.xml
<CustomField>
    <fullName>HQ_Record_End_Date__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Record end date</label>
    <type>Date</type>
</CustomField>