force-app/main/default/objects/NPP__c/fields/HQ_Record_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HQ_Record_Start_Date__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Record start date</label>
    <type>Date</type>
</CustomField>