force-app/main/default/objects/NPP__c/fields/HQ_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>HQ_Referral_Source__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Refferal source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>