force-app/main/default/objects/NPP__c/fields/HQ_Related_person_Contact__c.field-meta.xml
<CustomField>
    <fullName>HQ_Related_person_Contact__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Related person Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>