force-app/main/default/objects/NPP__c/fields/HQ_Related_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>HQ_Related_Person_Name__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Related Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>