force-app/main/default/objects/NPP__c/fields/HQ_Relationship_to_Patient__c.field-meta.xml
<CustomField>
    <fullName>HQ_Relationship_to_Patient__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Relationship to Patient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>