force-app/main/default/objects/NPP__c/fields/HQ_Release_the_medical_records__c.field-meta.xml
<CustomField>
    <fullName>HQ_Release_the_medical_records__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Release the medical records ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>