force-app/main/default/objects/NPP__c/fields/HQ_Security_Code__c.field-meta.xml
<CustomField>
    <fullName>HQ_Security_Code__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Security code</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>