force-app/main/default/objects/NPP__c/fields/HQ_Send_PDF__c.field-meta.xml
<CustomField>
    <fullName>HQ_Send_PDF__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Send PDF</label>
    <type>Checkbox</type>
</CustomField>