force-app/main/default/objects/NPP__c/fields/HQ_Sign_Id__c.field-meta.xml
<CustomField>
    <fullName>HQ_Sign_Id__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Sign Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>