force-app/main/default/objects/NPP__c/fields/HQ_Signatrue__c.field-meta.xml
<CustomField>
    <fullName>HQ_Signatrue__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>