force-app/main/default/objects/NPP__c/fields/HQ_Signature__c.field-meta.xml
<CustomField>
    <fullName>HQ_Signature__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Signature</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>