force-app/main/default/objects/NPP__c/fields/HQ_Summary_Plan__c.field-meta.xml
<CustomField>
    <fullName>HQ_Summary_Plan__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Summary Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>