force-app/main/default/objects/NPP__c/fields/HQ_Title_of_designated_representative__c.field-meta.xml
<CustomField>
    <fullName>HQ_Title_of_designated_representative__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Title of designated representative</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>