force-app/main/default/objects/NPP__c/fields/HQ_To__c.field-meta.xml
<CustomField>
    <fullName>HQ_To__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>