force-app/main/default/objects/NPP__c/fields/HQ_Transmissible_Diseases_Infections__c.field-meta.xml
<CustomField>
    <fullName>HQ_Transmissible_Diseases_Infections__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Transmissible Diseases/Infections</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>