force-app/main/default/objects/NPP__c/fields/HQ_Vaccine_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>HQ_Vaccine_Scheduled_Date__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Vaccine scheduled date</label>
    <type>Date</type>
</CustomField>