force-app/main/default/objects/NPP__c/fields/HQ_Vein_Conditions__c.field-meta.xml
<CustomField>
    <fullName>HQ_Vein_Conditions__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Vein conditions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>