force-app/main/default/objects/NPP__c/fields/HQ_Weight__c.field-meta.xml
<CustomField>
    <fullName>HQ_Weight__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>