force-app/main/default/objects/NPP__c/fields/HQ_What_makes_it_better__c.field-meta.xml
<CustomField>
    <fullName>HQ_What_makes_it_better__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>What makes it better?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical Therapy</fullName>
            </value>
            <value>
                <fullName>Occupational Therapy</fullName>
            </value>
            <value>
                <fullName>Chiropractic care</fullName>
            </value>
            <value>
                <fullName>Acupuncture</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Injections/Nerve Blocks</fullName>
            </value>
            <value>
                <fullName>Heat</fullName>
            </value>
            <value>
                <fullName>Ice</fullName>
            </value>
            <value>
                <fullName>Rest</fullName>
            </value>
            <value>
                <fullName>Compression</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>