force-app/main/default/objects/NPP__c/fields/HQ_what_makes_it_better_other__c.field-meta.xml
<CustomField>
    <fullName>HQ_what_makes_it_better_other__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>what makes it better other</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>