force-app/main/default/objects/NPP__c/fields/HQ_What_makes_it_worse__c.field-meta.xml
<CustomField>
    <fullName>HQ_What_makes_it_worse__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>What makes it worse?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sitting</fullName>
            </value>
            <value>
                <fullName>Standing</fullName>
            </value>
            <value>
                <fullName>Bending</fullName>
            </value>
            <value>
                <fullName>Stretching</fullName>
            </value>
            <value>
                <fullName>Walking</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Dressing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>