force-app/main/default/objects/NPP__c/fields/HQ_Zip_code__c.field-meta.xml
<CustomField>
    <fullName>HQ_Zip_code__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Zip code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>