force-app/main/default/objects/NPP__c/fields/Inserted__c.field-meta.xml
<CustomField>
    <fullName>Inserted__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Inserted</label>
    <type>Checkbox</type>
</CustomField>