force-app/main/default/objects/NPP__c/fields/Motor_Vehicle_Accident_Relevance_migrati__c.field-meta.xml
<CustomField>
    <fullName>Motor_Vehicle_Accident_Relevance_migrati__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Motor Vehicle Accident Relevance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>