force-app/main/default/objects/NPP__c/fields/Pain_Level_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Pain_Level_Migrated__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Pain Level</label>
    <type>TextArea</type>
</CustomField>