force-app/main/default/objects/NPP__c/fields/Pain_Start__c.field-meta.xml
<CustomField>
    <fullName>Pain_Start__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Pain Start</label>
    <type>TextArea</type>
</CustomField>