force-app/main/default/objects/NPP__c/fields/pdf_sent_to_Carecloud__c.field-meta.xml
<CustomField>
    <fullName>pdf_sent_to_Carecloud__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>pdf sent to Carecloud</label>
    <type>Checkbox</type>
</CustomField>