force-app/main/default/objects/NPP__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Year</label>
    <length>200</length>
    <type>Text</type>
</CustomField>