force-app/main/default/objects/NPP__c/recordTypes/NPP.recordType-meta.xml
<RecordType>
    <fullName>NPP</fullName>
    <active>true</active>
    <label>NPP</label>
</RecordType>