force-app/main/default/objects/NPP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HQ_Patient_Name__c</columns>
    <columns>HQ_Weight__c</columns>
    <columns>HQ_Occupational_Physical_Demands__c</columns>
    <columns>HQ_Chief_Complaint__c</columns>
    <columns>HQ_Paperwork_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inserted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>