force-app/main/default/objects/NPP__c/listViews/Incomplete_paperwork.listView-meta.xml
<ListView>
    <fullName>Incomplete_paperwork</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>HQ_Paperwork_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HQ_Paperwork_Status__c</field>
        <operation>equals</operation>
        <value>38</value>
    </filters>
    <label>Incomplete paperwork</label>
</ListView>