force-app/main/default/objects/NPP__c/listViews/X2023_Migrated_data.listView-meta.xml
<ListView>
    <fullName>X2023_Migrated_data</fullName>
    <columns>NAME</columns>
    <columns>HQ_Name__c</columns>
    <columns>HQ_Chief_Complaint__c</columns>
    <columns>HQ_Family_Medical_History__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2023</value>
    </filters>
    <filters>
        <field>Inserted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>2023 Migrated data</label>
</ListView>