force-app/main/default/objects/NPP__c/listViews/X2024_Migrated_data.listView-meta.xml
<ListView>
    <fullName>X2024_Migrated_data</fullName>
    <columns>NAME</columns>
    <columns>HQ_Patient_Name__c</columns>
    <columns>HQ_Weight__c</columns>
    <columns>HQ_Occupational_Physical_Demands__c</columns>
    <columns>HQ_Chief_Complaint__c</columns>
    <columns>HQ_Paperwork_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>6/24/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Inserted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>2024 Migrated data</label>
</ListView>